As per PO, should be DIF modification timestamp.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
@@ -67,7 +67,7 @@
             {% if dataset.datasetSubmission %}
             {{ dataset.datasetSubmission.creationTimeStamp|date('M d Y H:i T', 'UTC') }}<br /> }}
             {% else %}
-            {{ dataset.dif.creationTimeStamp|date('M d Y H:i T', 'UTC') }}
+            {{ dataset.dif.modificationTimeStamp|date('M d Y H:i T', 'UTC') }}
             {% endif %}
         </td>
     </tr>
