--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/summary.html.twig
@@ -65,7 +65,7 @@
         <td>
             <b>Last Update:</b><br>
             {% if dataset.datasetSubmission %}
-            {{ dataset.datasetSubmission.modificationTimeStamp|date('M d Y H:i T', 'UTC') }}<br /> }}
+            {{ dataset.datasetSubmission.creationTimeStamp|date('M d Y H:i T', 'UTC') }}<br /> }}
             {% else %}
             {{ dataset.dif.modificationTimeStamp|date('M d Y H:i T', 'UTC') }}
             {% endif %}
