Initial framework and more for new DS submit page.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -8,7 +8,6 @@
                 'ui.dialog',
                 'ui.tabs',
                 'ui.widget',
-                'ui.autocomplete'
             ]
         )
     }}
@@ -16,43 +15,37 @@
     {{
         add_css (
             [
-                '//cdnjs.cloudflare.com/ajax/libs/jstree/3.0.1/themes/default/style.min.css',
+                '//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css',
+                '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css',
             ]
         )
     }}
 
-    {% stylesheets  '@PelagosAppBundle/Resources/public/css/dtree.css' %}
-        {{ add_css(asset_url) }}
-    {% endstylesheets  %}
-
-    {% stylesheets  '@PelagosAppBundle/Resources/public/css/registry.css' %}
+    {% stylesheets  '@PelagosAppBundle/Resources/public/css/dataset-submission.css' %}
         {{ add_css(asset_url) }}
     {% endstylesheets  %}
 
     {{
         add_js(
             [
+                '//cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.5/packaged/jquery.noty.packaged.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js',
-                '//cdnjs.cloudflare.com/ajax/libs/jstree/3.0.1/jstree.min.js',
                 '//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
+                '//maps.google.com/maps/api/js?v=3&key=AIzaSyBJjBREwu85aoCAbqqk-htGlPdSX7HAb6s',
+                '/includes/geoviz/geoviz.js',
+                '/includes/geoviz/mapWizard.js',
             ]
         )
     }}
-
-    {% javascripts '@PelagosAppBundle/Resources/public/js/dtree.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
 
     {% stylesheets '@PelagosAppBundle/Resources/public/css/fileBrowser.css' %}
         {{ add_css(asset_url) }}
     {% endstylesheets  %}
 
     {% javascripts '@PelagosAppBundle/Resources/public/js/fileBrowser.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
-
-    {% javascripts '@PelagosAppBundle/Resources/public/js/registry.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
 
@@ -65,13 +58,17 @@
     {% endjavascripts %}
 
     {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
+    
+    {% javascripts '@PelagosAppBundle/Resources/public/js/dataset-submission.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
 
 {% endblock %}
 
 
 {% block body %}
 
-<h1>Dataset Submission Form</h1>
+<h1>Dataset Submission</h1>
 
 {% if found and dif is not null and dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
     <div class="messages warning">
@@ -96,16 +93,7 @@
 {% endif %}
 
 
-<table border="0" style="height:100%;width:100%;">
-    <tr>
-        <td width="60%" style="vertical-align: top; background: transparent;">
-        {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
-        </td>
-        <td width="*">&nbsp;&nbsp;</td>
-        <td width="40%" style="vertical-align: top; background: transparent;">
-            {% include 'PelagosAppBundle:DatasetSubmission:tree.html.twig' %}
-        </td>
-    </tr>
-</table>
+{% include 'PelagosAppBundle:DatasetSubmission:submission-form.html.twig' %}
+
 <div class="modal" id="spinner"></div>
 {% endblock %}
