Working select2 and map.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -1,3 +1,12 @@
+.toolbarbutton {
+    padding: 4px;
+    font-size: 12px;
+}
+
+#helpinfo .ui-button{
+    display:block;
+}
+
 .emRequired::before
 {
     font-weight: bold; color:#FF0000;
