--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
@@ -12,14 +12,14 @@
             <td valign="top">
                 <div id="nonspatial" style="display:none;width:500px;margin:15px;">
                     <label for="cgeoloc"><b>Study Area Description: </b></label>
-                    <textarea rows="5" style="width:100%;"></textarea>
+                    <textarea id="deschere" rows="5" style="width:100%;"></textarea>
                 </div>
                 <div id="spatial">
                     <label for="cgeoloc"><b><em>*</em>Spatial Extent </b></label>
                     <div>
                         <div style="width:500px;height:300px;" id="smlMDEMap"></div>
                     </div>
-                    <textarea hidden name="gmd:polygons"></textarea>
+                    <textarea id="gmlhere" hidden name="gmd:polygons"></textarea>
                     
                 </div>
             </td>
