Use the pelagos jstree theme instead of dynamically loading custom css.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/index.html.twig
@@ -49,7 +49,7 @@
                             <div class="overview">
                                 <script type="text/javascript">
                                     var tree = {
-                                                theme: "classic",
+                                                theme: "pelagos",
                                                 max_depth: 2,
                                                 expand_to_depth: 0,
                                                 animation: 250,
