Revert "Working select2 and map."
This reverts commit ad8e1f8e28424e40ed684f132688579d8021a589.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -4,7 +4,7 @@
         <tr>
             <td>
                 <label for="contactperson">Name</label>
-                <select class="contactperson" id="contactperson" name="contactperson" required="required">
+                <select id="contactperson" name="contactperson" required="required">
                     {% if contactperson|default %}
                     <option value="{{contact-person.Person.id}}">
                         {{contactperson.lastName}}, {{contactperson.firstName}}, {{contactperson.emailAddress}}
