Changed some of the logic on controller due to missing tree.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -1,99 +1,1 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
-
-{% block head %}
-    {{
-        add_library (
-            [
-                'ui.datepicker',
-                'ui.dialog',
-                'ui.tabs',
-                'ui.widget',
-            ]
-        )
-    }}
-
-    {{
-        add_css (
-            [
-                '//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css',
-                '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css',
-            ]
-        )
-    }}
-
-    {% stylesheets  '@PelagosAppBundle/Resources/public/css/dataset-submission.css' %}
-        {{ add_css(asset_url) }}
-    {% endstylesheets  %}
-
-    {{
-        add_js(
-            [
-                '//cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.5/packaged/jquery.noty.packaged.min.js',
-                '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js',
-                '//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js',
-                '//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js',
-                '//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js',
-                '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
-                '//maps.google.com/maps/api/js?v=3&key=AIzaSyBJjBREwu85aoCAbqqk-htGlPdSX7HAb6s',
-                '/includes/geoviz/geoviz.js',
-                '/includes/geoviz/mapWizard.js',
-            ]
-        )
-    }}
-
-    {% stylesheets '@PelagosAppBundle/Resources/public/css/fileBrowser.css' %}
-        {{ add_css(asset_url) }}
-    {% endstylesheets  %}
-
-    {% javascripts '@PelagosAppBundle/Resources/public/js/fileBrowser.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
-
-    {% javascripts '@PelagosAppBundle/Resources/public/js/common.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
-
-    {% javascripts '@FOSJsRoutingBundle/Resources/public/js/router.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
-
-    {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
-    
-    {% javascripts '@PelagosAppBundle/Resources/public/js/dataset-submission.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
-
-{% endblock %}
-
-
-{% block body %}
-
-<h1>Dataset Submission</h1>
-
-{% if found and dif is not null and dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
-    <div class="messages warning">
-        <h2 class="element-invisible">Status message</h2>
-        The DIF has not yet been approved for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-    </div>
-{% elseif found and dif is not null and dif.status == constant('Pelagos\\Entity\\DIF::STATUS_UNSUBMITTED') %}
-    <div class="messages warning">
-        <h2 class="element-invisible">Status message</h2>
-        The DIF has not yet been submitted for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-    </div>
-{% elseif found and udi != '' %}
-    <div class="messages status">
-        <h2 class="element-invisible">Status message</h2>
-        Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
-    </div>
-{% elseif udi != '' %}
-    <div class="messages warning">
-        <h2 class="element-invisible">Status message</h2>
-        Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-    </div>
-{% endif %}
-
-
-{% include 'PelagosAppBundle:DatasetSubmission:submission-form.html.twig' %}
-
-<div class="modal" id="spinner"></div>
-{% endblock %}
+<h1>LOAD FROM UDI HERE!</h1>
