--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -14,16 +14,39 @@
     }}
 
     {{
-        add_js(
+        add_css (
             [
-                '//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js',
-                '//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js',
-                '//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css',
+                '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css',
             ]
         )
     }}
 
-    {% javascripts '@PelagosAppBundle/Resources/public/js/registry.js' %}
+    {% stylesheets  '@PelagosAppBundle/Resources/public/css/dataset-submission.css' %}
+        {{ add_css(asset_url) }}
+    {% endstylesheets  %}
+
+    {{
+        add_js(
+            [
+                '//cdnjs.cloudflare.com/ajax/libs/jquery-noty/2.3.5/packaged/jquery.noty.packaged.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/datejs/1.0/date.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js',
+                '//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js',
+                '//maps.google.com/maps/api/js?v=3&key=AIzaSyBJjBREwu85aoCAbqqk-htGlPdSX7HAb6s',
+                '/includes/geoviz/geoviz.js',
+                '/includes/geoviz/mapWizard.js',
+            ]
+        )
+    }}
+
+    {% stylesheets '@PelagosAppBundle/Resources/public/css/fileBrowser.css' %}
+        {{ add_css(asset_url) }}
+    {% endstylesheets  %}
+
+    {% javascripts '@PelagosAppBundle/Resources/public/js/fileBrowser.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
 
@@ -36,9 +59,12 @@
     {% endjavascripts %}
 
     {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
+    
+    {% javascripts '@PelagosAppBundle/Resources/public/js/dataset-submission.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
 
 {% endblock %}
-
 
 {% block body %}
 
@@ -59,6 +85,7 @@
         <h2 class="element-invisible">Status message</h2>
         Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
     </div>
+    {% set showform = true %}
 {% elseif udi != '' %}
     <div class="messages warning">
         <h2 class="element-invisible">Status message</h2>
@@ -66,7 +93,10 @@
     </div>
 {% endif %}
 
-{% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
-
+{% if showform|default %}
+    INCLUDE DATASUBMISSION FORM HERE!
+{% else %}
+    {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+{% endif %}
 <div class="modal" id="spinner"></div>
 {% endblock %}
