--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -7,6 +7,7 @@
     font-size: 12px;
     line-height: 24px;
     background: #f1f7fb;
+    //background: #bfcacd;
     color: #40626b;
     vertical-align: middle;
     text-decoration: none;
@@ -17,4 +18,9 @@
     -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
+}
+
+.emRequired::before {
+    font-weight: bold; color:#FF0000;
+    content:"*";
 }
