--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-repository-managers.dataset-processed.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-repository-managers.dataset-processed.email.twig
@@ -3,7 +3,9 @@
 {% block body_html %}
 A new dataset file for {{ datasetSubmission.dataset.udi }} has been submitted:<br>
 <br>
-Filename: {{ datasetSubmission.datasetFileName }}<br>
+Submitter: {{ datasetSubmission.creator.firstName }} {{ datasetSubmission.creator.lastName }}<br>
+File Name: {{ datasetSubmission.datasetFileName }}<br>
+File Size: {{ datasetSubmission.datasetFileSize|formatBytes }}<br>
 UDI: {{ datasetSubmission.dataset.udi }}<br>
 Dataset Title: {{ datasetSubmission.dataset.title }}<br>
 Research Group: {{ datasetSubmission.dataset.researchGroup.name }}<br>
@@ -12,7 +14,9 @@ Research Group: {{ datasetSubmission.dataset.researchGroup.name }}<br>
 {% block body_text %}
 A new dataset file for {{ datasetSubmission.dataset.udi }} has been submitted:
 
-Filename: {{ datasetSubmission.datasetFileName }}
+Submitter: {{ datasetSubmission.creator.firstName }} {{ datasetSubmission.creator.lastName }}
+File Name: {{ datasetSubmission.datasetFileName }}
+File Size: {{ datasetSubmission.datasetFileSize|formatBytes }}
 UDI: {{ datasetSubmission.dataset.udi }}
 Dataset Title: {{ datasetSubmission.dataset.title }}
 Research Group: {{ datasetSubmission.dataset.researchGroup.name }}
