Changed some fields to formType.

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -8,6 +8,10 @@
     display:block;
 }
 
+#navbuttons .ui-button{
+    display:block;
+}
+
 .emRequired::before
 {
     font-weight: bold; color:#FF0000;
