--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -3,6 +3,7 @@
     <table class="tab-table">
         <tr>
             <td>
+                {{ form_row(form.datasetContacts) }}
                 <label for="contactperson">Name</label>
                 <select class="contactperson" id="contactperson" name="contactperson" required="required">
                     {% if contactperson|default %}
