--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/distribution-info.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/distribution-info.html.twig
@@ -7,8 +7,7 @@
     <table class="tab-table">
         <tr>
             <td>
-                <label for="MDF1_DistroInfo">Data Transfer Format</label>
-                <input type="text">
+                {{ form_row(form.temporalExtentEndPosition) }}
             </td>
             <td>
                 <pre>
