--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -5,12 +5,15 @@
         <ul>
             <li><a href="{{ path("pelagos_app_ui_account_default") }}">Request Account</a></li>
             <li><a href="{{ path("pelagos_app_ui_datarepository_default", {id:1}) }}">Data Repository</a></li>
+            <li><a href="{{ path("pelagos_app_ui_mdapp_default") }}">Metadata Approval Tool (MDApp)</a></li>
+            <li><a href="{{ path("pelagos_dataset_summary") }}">Dataset Summary and Deletion</a></li>
             <li>
                 Lists
                 <ul>
                     <li><a href="{{ path("pelagos_app_list_fundingorganizations") }}">Funding Organizations</a></li>
                     <li><a href="{{ path("pelagos_app_list_researchgroups") }}">Research Groups</a></li>
                     <li><a href="{{ path("pelagos_app_list_people") }}">People</a></li>
+                    <li><a href="{{ path("pelagos_app_ui_publicationdatasetlink_list") }}">Dataset - Publication Links</a></li>
                 </ul>
             </li>
             <li>
@@ -22,6 +25,7 @@
                     <li><a href="{{ path("pelagos_app_ui_person_default") }}">Person</a></li>
                     <li><a href="{{ path("pelagos_app_ui_persondatarepository_default") }}">Person to Data Repository Association</a></li>
                     <li><a href="{{ path("pelagos_app_ui_personfundingorganization_default") }}">Person to Funding Organization Association</a></li>
+                    <li><a href="{{ path("pelagos_app_ui_publicationdatasetlink_default") }}">Dataset - Publication Link</a></li>
                 </ul>
             </li>
         </ul>
