--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -59,7 +59,7 @@
     {% endjavascripts %}
 
     {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
-    
+
     {% javascripts '@PelagosAppBundle/Resources/public/js/dataset-submission.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
@@ -94,7 +94,11 @@
 {% endif %}
 
 {% if showform|default %}
+    {% if is_granted('CAN_CREATE', datasetSubmission) or is_granted('CAN_EDIT', datasetSubmission) %}
     INCLUDE DATASUBMISSION FORM HERE!
+    {% else %}
+    Sorry, but you can only create or edit dataset submissions on datasets associated with your research groups.
+    {% endif %}
 {% else %}
     {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
 {% endif %}
